e2e/tests/snapshots/bp_generate__client.snap
---
source: e2e/tests/bp_generate.rs
assertion_line: 26
expression: "fs::read_file(config_path_client).await"

---
{
  "bind": "127.0.0.1:1080",
  "with_basic_auth": null,
  "server_bind": "__some_where__:3000",
  "pac_bind": null,
  "key": "__some_key__",
  "encryption": "erp",
  "acl": null,
  "pin_dest_addr": null,
  "udp_over_tcp": false,
  "dns_server": "8.8.8.8:53",
  "tls": false,
  "quic": false,
  "quic_max_concurrency": null,
  "tls_cert": null,
  "monitor": null
}
